--- a/TianWen.XiaoZhen1Qu.Web/Web.config
+++ b/TianWen.XiaoZhen1Qu.Web/Web.config
@@ -66,5 +66,11 @@
         <add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </controls>
     </pages>
+    <httpModules>
+      <add name="SessionModule" type="TianWen.Nhibernate.TianWen.Nhibernate.SessionModule, TianWen.Nhibernate, Version=1.0.0.0, Culture=neutral"/>
+      <add name="DiskPermissions" type="TianWen.Utility.DiskPermissionsCheckModule"/>
+      <add name="UrlRoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+    </httpModules>
   </system.web>
 </configuration>
