--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -125,6 +125,7 @@
     <Content Include="Areas\Business\Scripts\Business\COMMON.js" />
     <Content Include="Areas\Business\Scripts\Business\PageJson.js" />
     <Content Include="Areas\Business\Scripts\Business\YHDLXX.js" />
+    <Content Include="Areas\Business\Scripts\Business\YHGL.js" />
     <Content Include="Areas\Business\Scripts\Business\YHJBXX.js" />
     <Content Include="Areas\Business\Scripts\jquery-1.9.1.min.js" />
     <Content Include="Config\SpringConfig\BLL.xml" />
@@ -148,6 +149,7 @@
     <Compile Include="Areas\Business\BusinessAreaRegistration.cs" />
     <Compile Include="Areas\Business\Common\BaseController.cs" />
     <Compile Include="Areas\Business\Controllers\YHDLXXController.cs" />
+    <Compile Include="Areas\Business\Controllers\YHGLController.cs" />
     <Compile Include="Areas\Business\Controllers\YHJBXXController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -173,6 +175,7 @@
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="NHDataSources.config" />
     <Content Include="Areas\Business\Views\YHDLXX\YHDLXX.cshtml" />
+    <Content Include="Areas\Business\Views\YHGL\YHGL.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
