--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Areas\Business\Controllers\YHDLXXController.cs" />
     <Compile Include="Areas\Business\Controllers\YHGLController.cs" />
     <Compile Include="Areas\Business\Controllers\YHJBXXController.cs" />
+    <Compile Include="Areas\Business\Controllers\ZHMMController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -176,6 +177,7 @@
     <Content Include="NHDataSources.config" />
     <Content Include="Areas\Business\Views\YHDLXX\YHDLXX.cshtml" />
     <Content Include="Areas\Business\Views\YHGL\YHGL.cshtml" />
+    <Content Include="Areas\Business\Views\ZHMM\ZHMM.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
