--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -112,6 +112,11 @@
   <ItemGroup>
     <Content Include="Areas\Business\Aspx\png.aspx" />
     <Content Include="Areas\Business\Css\images\no.png" />
+    <Content Include="Areas\Business\Css\images\one-blue.png" />
+    <Content Include="Areas\Business\Css\images\three-blue.png" />
+    <Content Include="Areas\Business\Css\images\three-gray.png" />
+    <Content Include="Areas\Business\Css\images\two-blue.png" />
+    <Content Include="Areas\Business\Css\images\two-gray.png" />
     <Content Include="Areas\Business\Css\images\yes.png" />
     <Content Include="Areas\Business\Css\PageCommon.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.css" />
