--- a/TianWen.XiaoZhen1Qu.Web/bin/TianWen.XiaoZhen1Qu.Web.dll.config
+++ b/TianWen.XiaoZhen1Qu.Web/bin/TianWen.XiaoZhen1Qu.Web.dll.config
@@ -48,6 +48,7 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
+    <add key="PhotoSavePath" value="F:\福建天问信息技术责任有限公司\小镇1区源代码\TianWen.XiaoZhen1Qu.Web\Areas\Business\Photos\"/>
   </appSettings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" maxRequestLength="40960" executionTimeout="30000"/>
