--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -139,6 +139,7 @@
     <Content Include="Areas\Business\Css\images\arrow_up.png" />
     <Content Include="Areas\Business\Css\images\cellphone.png" />
     <Content Include="Areas\Business\Css\images\icon.png" />
+    <Content Include="Areas\Business\Css\images\info.png" />
     <Content Include="Areas\Business\Css\images\logo.png" />
     <Content Include="Areas\Business\Css\images\no.png" />
     <Content Include="Areas\Business\Css\images\one-blue.png" />
@@ -150,6 +151,7 @@
     <Content Include="Areas\Business\Css\images\two-gray.png" />
     <Content Include="Areas\Business\Css\images\upload_small.png" />
     <Content Include="Areas\Business\Css\images\upload_small2.png" />
+    <Content Include="Areas\Business\Css\images\warn.png" />
     <Content Include="Areas\Business\Css\images\yes.png" />
     <Content Include="Areas\Business\Css\images\righttip.png" />
     <Content Include="Areas\Business\Css\LBXZ.css" />
@@ -164,6 +166,7 @@
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\js\npm.js" />
     <Content Include="Areas\Business\Scripts\Business\COMMON.js" />
     <Content Include="Areas\Business\Scripts\Business\FWCZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\FWCZYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\LBXZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PageJson.js" />
     <Content Include="Areas\Business\Scripts\Business\WDFB.js" />
