--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -164,7 +164,8 @@
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\js\bootstrap.js" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\js\bootstrap.min.js" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\js\npm.js" />
-    <Content Include="Areas\Business\Scripts\Business\COMMON.js" />
+    <Content Include="Areas\Business\Scripts\Business\Common\Common.js" />
+    <Content Include="Areas\Business\Scripts\Business\Common\Regular.js" />
     <Content Include="Areas\Business\Scripts\Business\FWCZ.js" />
     <Content Include="Areas\Business\Scripts\Business\FWCZYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\LBXZ.js" />
@@ -265,7 +266,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Business\Photos\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
