--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -138,6 +138,7 @@
     <Content Include="Areas\Business\Css\images\arrow_down.png" />
     <Content Include="Areas\Business\Css\images\arrow_up.png" />
     <Content Include="Areas\Business\Css\images\cellphone.png" />
+    <Content Include="Areas\Business\Css\images\close.png" />
     <Content Include="Areas\Business\Css\images\delete.png" />
     <Content Include="Areas\Business\Css\images\delete_select.png" />
     <Content Include="Areas\Business\Css\images\edit.png" />
