--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -48,6 +48,9 @@
     <Reference Include="CommonClassLib">
       <HintPath>..\GlobalBin\CommonClassLib.dll</HintPath>
     </Reference>
+    <Reference Include="Gma.QrCodeNet.Encoding.Net35">
+      <HintPath>..\GlobalBin\Gma.QrCodeNet.Encoding.Net35.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections">
       <HintPath>..\GlobalBin\Iesi.Collections.dll</HintPath>
     </Reference>
@@ -232,6 +235,7 @@
     <Compile Include="Areas\Business\BusinessAreaRegistration.cs" />
     <Compile Include="Areas\Business\Common\BaseController.cs" />
     <Compile Include="Areas\Business\Common\Common.cs" />
+    <Compile Include="Areas\Business\Common\QRCodeHelper.cs" />
     <Compile Include="Areas\Business\Controllers\FBCGController.cs" />
     <Compile Include="Areas\Business\Controllers\FWCZController.cs" />
     <Compile Include="Areas\Business\Controllers\LBXZController.cs" />
@@ -284,6 +288,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Business\Photos\" />
+    <Folder Include="Areas\Business\QRCode\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
