--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Maps\XQJBXX_Map.cs" />
     <Compile Include="Maps\XXLB_Map.cs" />
     <Compile Include="Maps\YHJBXX_Map.cs" />
+    <Compile Include="Maps\YHSCXX_Map.cs" />
     <Compile Include="Maps\ZDDLXX_Map.cs" />
     <Compile Include="Models\CODES.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Models\XQJBXX.cs" />
     <Compile Include="Models\XXLB.cs" />
     <Compile Include="Models\YHJBXX.cs" />
+    <Compile Include="Models\YHSCXX.cs" />
     <Compile Include="Models\ZDDLXX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
