--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -146,6 +146,7 @@
     <Content Include="Areas\Business\Css\images\close.png" />
     <Content Include="Areas\Business\Css\images\delete.png" />
     <Content Include="Areas\Business\Css\images\delete_select.png" />
+    <Content Include="Areas\Business\Css\images\down.png" />
     <Content Include="Areas\Business\Css\images\edit.png" />
     <Content Include="Areas\Business\Css\images\edit_select.png" />
     <Content Include="Areas\Business\Css\images\icon.png" />
@@ -165,6 +166,7 @@
     <Content Include="Areas\Business\Css\images\three-gray.png" />
     <Content Include="Areas\Business\Css\images\two-blue.png" />
     <Content Include="Areas\Business\Css\images\two-gray.png" />
+    <Content Include="Areas\Business\Css\images\up.png" />
     <Content Include="Areas\Business\Css\images\upload_small.png" />
     <Content Include="Areas\Business\Css\images\upload_small2.png" />
     <Content Include="Areas\Business\Css\images\warn.png" />
