--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -144,11 +144,13 @@
     <Content Include="Areas\Business\Css\images\cellphone.png" />
     <Content Include="Areas\Business\Css\images\clip.png" />
     <Content Include="Areas\Business\Css\images\close.png" />
+    <Content Include="Areas\Business\Css\images\contract.png" />
     <Content Include="Areas\Business\Css\images\delete.png" />
     <Content Include="Areas\Business\Css\images\delete_select.png" />
     <Content Include="Areas\Business\Css\images\down.png" />
     <Content Include="Areas\Business\Css\images\edit.png" />
     <Content Include="Areas\Business\Css\images\edit_select.png" />
+    <Content Include="Areas\Business\Css\images\expand.png" />
     <Content Include="Areas\Business\Css\images\icon.png" />
     <Content Include="Areas\Business\Css\images\info.png" />
     <Content Include="Areas\Business\Css\images\logo.png" />
