--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -165,10 +165,10 @@
     <Content Include="Areas\Business\Css\images\radio_gray.png" />
     <Content Include="Areas\Business\Css\images\rotate.png" />
     <Content Include="Areas\Business\Css\images\share.png" />
-    <Content Include="Areas\Business\Css\images\system_photo1.png" />
-    <Content Include="Areas\Business\Css\images\system_photo2.png" />
-    <Content Include="Areas\Business\Css\images\system_photo3.png" />
-    <Content Include="Areas\Business\Css\images\system_photo4.png" />
+    <Content Include="Areas\Business\Css\images\system_photo1.jpg" />
+    <Content Include="Areas\Business\Css\images\system_photo2.jpg" />
+    <Content Include="Areas\Business\Css\images\system_photo3.jpg" />
+    <Content Include="Areas\Business\Css\images\system_photo4.jpg" />
     <Content Include="Areas\Business\Css\images\test.jpg" />
     <Content Include="Areas\Business\Css\images\three-blue.png" />
     <Content Include="Areas\Business\Css\images\three-gray.png" />
